Add some content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello, world!
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>I am Andrew Luca</title>
+	<style>
+		body {
+			height: 100vh;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			font-family: sans-serif;
+			text-align: center;
+		}
+
+		h1, h3, h6, a, p{
+			margin: 0;
+			margin-bottom: 15px;
+		}
+
+		a {
+			display: inline-block;
+			text-decoration: none;
+			color: #000000;
+			font-weight: 800;
+			background-color: orange;
+			border-radius: 999px;
+			padding: 5px 10px 4px 10px;
+			box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+			transition: box-shadow 0.4s ease;
+		}
+
+		a:hover {
+			box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.2);
+		}
+	</style>
+</head>
+<body>
+	<h1>Hello, world!</h1>
+	<a href="https://twitter.com/iamandrewluca">@iamandrewluca</a>
+	<h6>All in developer at Winify AG.</h6>
+	<p>How good is your Google Fu?</p>
+</body>
+</html>
