Fix fucking typo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </h1>
                     <p id="text01">
                         <span>
-                            How good is yout Google Fu?
+                            How good is your Google Fu?
                         </span>
                         <br>
                             <span>
