--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Andrew Luca | All In Developer!</title>
+		<title>Andrew Luca | All In Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 		<meta name="description" content="Full stack developer!" />
-		<meta property="og:site_name" content="Andrew Luca | All In Developer!" />
-		<meta property="og:title" content="Andrew Luca | All In Developer!" />
+		<meta property="og:site_name" content="Andrew Luca | All In Developer" />
+		<meta property="og:title" content="Andrew Luca | All In Developer" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="Full stack developer!" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic" rel="stylesheet" type="text/css" />
@@ -23,7 +23,7 @@
 						<span class="frame"><img src="assets/images/image01.jpg" alt="" /></span>
 					</div>
 					<h1 id="text02">Andrew Luca</h1>
-					<p id="text01"><code>All In Developer! ♣️ ♥️ ♠️ ♦️</code></p>
+					<p id="text01"><code>All In Developer</code></p>
 					<hr id="divider01">
 					<ul id="icons01" class="icons">
 						<li>
