--- a/public/youtube.html
+++ b/public/youtube.html
@@ -1,5 +1,5 @@
 <script src="https://cdn.splitbee.io/sb.js"></script>
 <meta
 	http-equiv="Refresh"
-	content="0; URL=https://www.youtube.com/channel/UCqYJyrFXBlscN_xJ9rqCesQ"
+	content="0; URL=https://youtube.com/@iamandrewluca"
 />
