--- a/public/mastodon.html
+++ b/public/mastodon.html
@@ -1,5 +1,5 @@
 <script src="https://cdn.splitbee.io/sb.js"></script>
 <meta
 	http-equiv="Refresh"
-	content="0; URL=https://fosstodon.org/@iamandrewluca"
+	content="0; URL=https://mstdn.md/@iamandrewluca"
 />
