feat: add providers

--- a/public/mastodon.html
+++ b/public/mastodon.html
@@ -1,5 +1,2 @@
 <script src="https://cdn.splitbee.io/sb.js"></script>
-<meta
-	http-equiv="Refresh"
-	content="0; URL=https://mstdn.md/@iamandrewluca"
-/>
+<meta http-equiv="Refresh" content="0; URL=https://mstdn.md/@iamandrewluca" />
