--- a/public/bluesky.html
+++ b/public/bluesky.html
@@ -1,5 +1,5 @@
 <script src="https://cdn.splitbee.io/sb.js"></script>
 <meta
 	http-equiv="Refresh"
-	content="0; URL=https://staging.bsky.app/profile/iamandrewluca.com"
+	content="0; URL=https://staging.bsky.app/profile/luca.md"
 />
