--- a/public/github.html
+++ b/public/github.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; URL=https://github.com/iamandrewluca" />
+<meta http-equiv="Refresh" content="0; URL=https://github.com/unrevised6419" />
